[project]
name = "claude-pipe"
version = "0.1.0"
description = "Pipe prompts to the Claude CLI via tmux and get clean text back"
requires-python = ">=3.13"
dependencies = [
    "libtmux>=0.53.0",
]

[project.scripts]
claude-pipe = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
